<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:checkedButton="@+id/tip15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_label">

        <RadioButton
            android:id="@+id/tip15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/tip20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/tip25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/tipCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cTip"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/rg_label"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/rb_label"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tf_tipPercent"
        android:layout_width="144dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/tip_input"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/tf_numOfPeople"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/numPeople"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/rg_label"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tf_billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/billAmount"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_numOfPeople" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/resButton"
        app:layout_constraintEnd_toStartOf="@+id/calcButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_tipPercent" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/calcButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/tf_tipPercent" />

    <TextView
        android:id="@+id/billTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/billTotal"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/tipTotal"
        app:layout_constraintTop_toBottomOf="@+id/resetButton" />

    <TextView
        android:id="@+id/tipTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tipTotal"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/perPerson"
        app:layout_constraintStart_toEndOf="@+id/billTotal"
        app:layout_constraintTop_toBottomOf="@+id/calcButton" />

    <TextView
        android:id="@+id/perPerson"
        android:layout_width="242dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/totalPerPerson"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billTotal" />

</android.support.constraint.ConstraintLayout>